--- a/css/main.css
+++ b/css/main.css
@@ -76,12 +76,52 @@ a {
   vertical-align: center;
 }
 
-.btn--blue {
-  background-color: #2176FF;
+.btn--red {
+  background-color: #C30000;
 }
 
 .btn--ring {
   border: 1px solid #2176FF;
+}
+
+.btn--anim {
+  border: 1px solid #2176FF;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  -webkit-transition: all .35s;
+  transition: all .35s;
+}
+
+.btn--anim::before, .btn--anim::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  background: #2176FF;
+  z-index: -1;
+  -webkit-transition: all .35s;
+  transition: all .35s;
+}
+
+.btn--anim::before {
+  opacity: .5;
+}
+
+.btn--anim::after {
+  -webkit-transition-delay: .2s;
+          transition-delay: .2s;
+}
+
+.btn--anim:hover {
+  color: #fff;
+}
+
+.btn--anim:hover::before, .btn--anim:hover::after {
+  top: 0;
 }
 
 .shapes {
@@ -100,6 +140,12 @@ a {
   position: absolute;
   left: 60%;
   top: 35%;
+}
+
+.header__btn-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .nav {
