--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -16,11 +16,50 @@
     vertical-align: center;
   }
 
-  &--blue {
-    background-color: $color-blue;
+  &--red {
+    background-color: $color-red;
   }
 
   &--ring {
     border: 1px solid $color-blue;
+  }
+
+  &--anim {
+    border: 1px solid $color-blue;
+    color: $color-white;
+    position: relative;
+    overflow: hidden;
+    background: transparent;
+    transition: all .35s;
+
+    &::before,
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: -100%;
+      left: 0;
+      background: $color-blue;
+      z-index: -1;
+      transition: all .35s;
+    }
+
+    &::before{
+      opacity: .5;
+    }
+    
+    &::after{
+      transition-delay: .2s;
+    }
+    
+    &:hover{
+      color: $color-white;
+    }
+    
+    &:hover::before,
+    &:hover::after{
+      top: 0;
+    }
   }
 }
