--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,4 +7,10 @@ $color-purple: #BF00FF;
 $color-white: #fff;
 $color-black: #000;
 
+$color-grey-light: #eee;
+$color-grey-dark-text: #111111;
+
 $default-font-size: 1.6rem;
+
+
+$gutter-right: 2rem;
