--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,10 +4,12 @@
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
+@import "base/keyframes";
 
 @import "components/button";
 @import "components/shapes";
 
+@import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
 
