--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,33 @@ a {
   font-size: 4rem;
 }
 
+.heading-secondary {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 6.4rem;
+  color: #fff;
+  font-weight: 600;
+  line-height: 1.16;
+}
+
+.heading-secondary span {
+  display: block;
+}
+
+.paragraph {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2.4rem;
+  color: #fff;
+}
+
 .u-margin-bottom-small {
   margin-bottom: 1.8rem;
 }
 
 .u-margin-bottom-medium {
-  margin-bottom: 2rem;
+  margin-bottom: 2.4rem;
 }
 
 .u-not-select {
@@ -132,6 +153,413 @@ a {
           transform: translate(0, -50%);
 }
 
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.container .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container .row .col-1 {
+  width: calc(100% / 12);
+}
+
+.container .row .col-2 {
+  width: calc((100% / 12) * 2);
+}
+
+.container .row .col-3 {
+  width: calc((100% / 12) * 3);
+}
+
+.container .row .col-4 {
+  width: calc((100% / 12) * 4);
+}
+
+.container .row .col-5 {
+  width: calc((100% / 12) * 5);
+}
+
+.container .row .col-6 {
+  width: calc((100% / 12) * 6);
+}
+
+.container .row .col-7 {
+  width: calc((100% / 12) * 7);
+}
+
+.container .row .col-8 {
+  width: calc((100% / 12) * 8);
+}
+
+.container .row .col-9 {
+  width: calc((100% / 12) * 9);
+}
+
+.container .row .col-10 {
+  width: calc((100% / 12) * 10);
+}
+
+.container .row .col-11 {
+  width: calc((100% / 12) * 11);
+}
+
+.container .row .col-12 {
+  width: 100%;
+}
+
+.container .row .offset-1 {
+  margin-left: calc(100% / 12);
+}
+
+.container .row .offset-2 {
+  margin-left: calc((100% / 12) * 2);
+}
+
+.container .row .offset-3 {
+  margin-left: calc((100% / 12) * 3);
+}
+
+.container .row .offset-4 {
+  margin-left: calc((100% / 12) * 4);
+}
+
+.container .row .offset-5 {
+  margin-left: calc((100% / 12) * 5);
+}
+
+.container .row .offset-6 {
+  margin-left: calc((100% / 12) * 6);
+}
+
+.container .row .offset-7 {
+  margin-left: calc((100% / 12) * 7);
+}
+
+.container .row .offset-8 {
+  margin-left: calc((100% / 12) * 8);
+}
+
+.container .row .offset-9 {
+  margin-left: calc((100% / 12) * 9);
+}
+
+.container .row .offset-10 {
+  margin-left: calc((100% / 12) * 10);
+}
+
+.container .row .offset-11 {
+  margin-left: calc((100% / 12) * 11);
+}
+
+.container .row .offset-12 {
+  margin-left: 100%;
+}
+
+@media (min-width: 576px) {
+  .container .row .col-sm-1 {
+    width: calc(100% / 12);
+  }
+  .container .row .col-sm-2 {
+    width: calc((100% / 12) * 2);
+  }
+  .container .row .col-sm-3 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-sm-4 {
+    width: calc((100% / 12) * 4);
+  }
+  .container .row .col-sm-5 {
+    width: calc((100% / 12) * 5);
+  }
+  .container .row .col-sm-6 {
+    width: calc((100% / 12) * 6);
+  }
+  .container .row .col-sm-7 {
+    width: calc((100% / 12) * 7);
+  }
+  .container .row .col-sm-8 {
+    width: calc((100% / 12) * 8);
+  }
+  .container .row .col-sm-9 {
+    width: calc((100% / 12) * 9);
+  }
+  .container .row .col-sm-10 {
+    width: calc((100% / 12) * 10);
+  }
+  .container .row .col-sm-11 {
+    width: calc((100% / 12) * 11);
+  }
+  .container .row .col-sm-12 {
+    width: 100%;
+  }
+  .container .row .offset-sm-1 {
+    margin-left: calc(100% / 12);
+  }
+  .container .row .offset-sm-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+  .container .row .offset-sm-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-4 {
+    margin-left: calc((100% / 12) * 4);
+  }
+  .container .row .offset-sm-5 {
+    margin-left: calc((100% / 12) * 5);
+  }
+  .container .row .offset-sm-6 {
+    margin-left: calc((100% / 12) * 6);
+  }
+  .container .row .offset-sm-7 {
+    margin-left: calc((100% / 12) * 7);
+  }
+  .container .row .offset-sm-8 {
+    margin-left: calc((100% / 12) * 8);
+  }
+  .container .row .offset-sm-9 {
+    margin-left: calc((100% / 12) * 9);
+  }
+  .container .row .offset-sm-10 {
+    margin-left: calc((100% / 12) * 10);
+  }
+  .container .row .offset-sm-11 {
+    margin-left: calc((100% / 12) * 11);
+  }
+  .container .row .offset-sm-12 {
+    margin-left: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .container .row .col-md-1 {
+    width: calc(100% / 12);
+  }
+  .container .row .col-md-2 {
+    width: calc((100% / 12) * 2);
+  }
+  .container .row .col-md-3 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-md-4 {
+    width: calc((100% / 12) * 4);
+  }
+  .container .row .col-md-5 {
+    width: calc((100% / 12) * 5);
+  }
+  .container .row .col-md-6 {
+    width: calc((100% / 12) * 6);
+  }
+  .container .row .col-md-7 {
+    width: calc((100% / 12) * 7);
+  }
+  .container .row .col-md-8 {
+    width: calc((100% / 12) * 8);
+  }
+  .container .row .col-md-9 {
+    width: calc((100% / 12) * 9);
+  }
+  .container .row .col-md-10 {
+    width: calc((100% / 12) * 10);
+  }
+  .container .row .col-md-11 {
+    width: calc((100% / 12) * 11);
+  }
+  .container .row .col-md-12 {
+    width: 100%;
+  }
+  .container .row .offset-md-1 {
+    margin-left: calc(100% / 12);
+  }
+  .container .row .offset-md-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+  .container .row .offset-md-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-md-4 {
+    margin-left: calc((100% / 12) * 4);
+  }
+  .container .row .offset-md-5 {
+    margin-left: calc((100% / 12) * 5);
+  }
+  .container .row .offset-md-6 {
+    margin-left: calc((100% / 12) * 6);
+  }
+  .container .row .offset-md-7 {
+    margin-left: calc((100% / 12) * 7);
+  }
+  .container .row .offset-md-8 {
+    margin-left: calc((100% / 12) * 8);
+  }
+  .container .row .offset-md-9 {
+    margin-left: calc((100% / 12) * 9);
+  }
+  .container .row .offset-md-10 {
+    margin-left: calc((100% / 12) * 10);
+  }
+  .container .row .offset-md-11 {
+    margin-left: calc((100% / 12) * 11);
+  }
+  .container .row .offset-md-12 {
+    margin-left: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container .row .col-lg-1 {
+    width: calc(100% / 12);
+  }
+  .container .row .col-lg-2 {
+    width: calc((100% / 12) * 2);
+  }
+  .container .row .col-lg-3 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-4 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-5 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-6 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-7 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-8 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-9 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-10 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-11 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-lg-12 {
+    width: 100%;
+  }
+  .container .row .offset-lg-1 {
+    margin-left: calc(100% / 12);
+  }
+  .container .row .offset-lg-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+  .container .row .offset-lg-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-4 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-5 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-6 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-7 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-8 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-9 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-10 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-11 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-lg-12 {
+    margin-left: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container .row .col-xl-1 {
+    width: calc(100% / 12);
+  }
+  .container .row .col-xl-2 {
+    width: calc((100% / 12) * 2);
+  }
+  .container .row .col-xl-3 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-4 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-5 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-6 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-7 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-8 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-9 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-10 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-11 {
+    width: calc((100% / 12) * 3);
+  }
+  .container .row .col-xl-12 {
+    width: 100%;
+  }
+  .container .row .offset-sm-1 {
+    margin-left: calc(100% / 12);
+  }
+  .container .row .offset-sm-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+  .container .row .offset-sm-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-4 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-5 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-6 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-7 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-8 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-9 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-10 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-11 {
+    margin-left: calc((100% / 12) * 3);
+  }
+  .container .row .offset-sm-12 {
+    margin-left: 100%;
+  }
+}
+
 .header {
   height: 100vh;
 }
@@ -196,5 +624,31 @@ a {
   padding: 1rem 2rem;
   border-radius: 40px;
   cursor: pointer;
+}
+
+.header {
+  margin-bottom: 25rem;
+}
+
+.about {
+  position: relative;
+}
+
+.about__bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  font-weight: 300;
+  font-size: 50vw;
+  color: #111111;
+  line-height: 0.3;
+  z-index: -1;
+}
+
+.about__heading-animated {
+  -webkit-transform: translateY(-100px);
+          transform: translateY(-100px);
+  opacity: 0;
 }
 /*# sourceMappingURL=main.css.map */
