--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -27,3 +27,22 @@ a {
     font-size: 4rem;
   }
 }
+
+.heading-secondary {
+  width: fit-content;
+  font-size: 6.4rem;
+  color: $color-white;
+  font-weight: 600;
+  line-height: 1.16;
+
+  span {
+    display: block;
+  }
+}
+
+.paragraph {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2.4rem;
+  color: $color-white;
+}
