--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,11 +29,14 @@ a {
 }
 
 .heading-secondary {
-  width: fit-content;
   font-size: 6.4rem;
   color: $color-white;
   font-weight: 600;
   line-height: 1.16;
+
+  &--pink {
+    color: $color-red;
+  }
 
   span {
     display: block;
