--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,4 +1,7 @@
 .u-margin-bottom-small { margin-bottom: 1.8rem}
 .u-margin-bottom-medium { margin-bottom: 2.4rem}
+.u-margin-bottom-large { margin-bottom: 5rem}
+
+.u-text-align-right {text-align: right}
 
 .u-not-select { user-select: none; }
