--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/keyframes";
 
 @import "components/button";
+@import "components/img-grid";
 @import "components/shapes";
 
 @import "layout/grid";
