--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color-black: #000;
 
 $color-grey-light: #eee;
 $color-grey-dark-text: #111111;
+$color-grey-dark-body: #0C0A0A;
 
 $default-font-size: 1.6rem;
 
