--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,3 +18,27 @@
     z-index: -1;
   }
 }
+
+.speakers {
+  margin-bottom: 25rem;
+}
+
+.schedule {
+  margin-bottom: 25rem;
+}
+
+.rewind {
+  position: relative;
+
+  &__video-container {
+    border: 1px solid orangered;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+
+  &__video {
+    border: 1px solid yellow;
+  }
+}
