--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/img-grid";
 @import "components/scheduler";
 @import "components/shapes";
+@import "components/testimonial";
 
 @import "layout/grid";
 @import "layout/header";
