--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/shapes";
 @import "components/testimonial";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
