--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,28 @@ a {
           transform: translate(0, -50%);
 }
 
+.footer {
+  padding: 4rem;
+  text-align: center;
+}
+
+.footer__icons {
+  margin-bottom: 1.5rem;
+}
+
+.footer__icons a:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.footer p {
+  font-size: 1.4rem;
+  line-height: 1.7;
+}
+
+.footer p span {
+  display: block;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -875,6 +897,10 @@ a {
   left: 5rem;
 }
 
+.faq {
+  margin-bottom: 25rem;
+}
+
 .faq__container {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -915,5 +941,50 @@ a {
 
 .faq .visible {
   display: block;
+}
+
+.sponsors {
+  margin-bottom: 10rem;
+}
+
+.sponsors .row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sponsors__img:not(:last-child) {
+  margin-right: 5rem;
+}
+
+.sponsors__heading {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #fff;
+  margin: 0 auto;
+  padding-bottom: .5rem;
+  margin-bottom: 2rem;
+}
+
+.sponsors__container--student-partners {
+  margin-bottom: 8rem;
+}
+
+.sponsors__container--student-partners h5 {
+  margin-bottom: 8rem;
+}
+
+.sponsors__container--community-partners {
+  margin-bottom: 8rem;
+}
+
+.sponsors__container--community-partners .row:not(:nth-child(2)) {
+  margin-top: -9rem;
+}
+
+.sponsors__container--media-partners h5 {
+  margin-bottom: 8rem;
 }
 /*# sourceMappingURL=main.css.map */
