StickyNav & ScrollToPos Fix

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,12 @@ $color-red: #C30000;
 $color-orange: #FF6B35;
 $color-purple: #BF00FF;
 
+// $color-pink: #FF00AA;
+// $color-blue: #2176FF;
+// $color-red: #00379F;
+// $color-orange: #FF6B35;
+// $color-purple: #BF00FF;
+
 $color-white: #fff;
 $color-black: #000;
 
