--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -760,8 +761,15 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  position: relative;
+  position: fixed;
+  top: 0;
+  height: 9rem;
+  width: 100%;
+  background-color: #000;
   font-size: 1.6rem;
+  z-index: 100;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .nav__logo-box {
@@ -800,6 +808,16 @@ a {
   padding: 1rem 2rem;
   border-radius: 40px;
   cursor: pointer;
+}
+
+.nav.hidden {
+  -webkit-transform: translateY(-9rem);
+          transform: translateY(-9rem);
+}
+
+.nav.visible {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .header {
