--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/button";
 @import "components/img-grid";
+@import "components/loader";
 @import "components/scheduler";
 @import "components/shapes";
 @import "components/testimonial";
