--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,7 @@ a {
 .loader {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   background-color: #000;
   top: 0;
   left: 0;
