--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,7 +1,7 @@
 .loader {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   background-color: $color-black;
   top: 0;
   left: 0;
