--- a/sass/base/_keyframes.scss
+++ b/sass/base/_keyframes.scss
@@ -47,3 +47,50 @@
     opacity: 1;
   }
 }
+
+
+$offset: 187;
+$duration: 1.4s;
+
+@keyframes colors {
+	0% { stroke: #4285F4; }
+	25% { stroke: #DE3E35; }
+	50% { stroke: #F7C223; }
+	75% { stroke: #1B9A59; }
+  100% { stroke: #4285F4; }
+}
+
+@keyframes dash {
+ 0% { stroke-dashoffset: $offset; }
+ 50% {
+   stroke-dashoffset: $offset/4;
+   transform:rotate(135deg);
+ }
+ 100% {
+   stroke-dashoffset: $offset;
+   transform:rotate(450deg);
+ }
+}
+
+@keyframes rotator {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(270deg); }
+}
+
+@keyframes bgFillerIn {
+  from {
+    left: -100%;
+  }
+  to {
+    left: -1rem;
+  }
+}
+
+@keyframes bgFillerOut {
+  from {
+    left: -1rem;
+  }
+  to {
+    left: -100%;
+  }
+}
