--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,85 +6,21 @@
     display: flex;
 
     .col {
-      &-1{
-        width: calc(100% / 12);
-      }
-
-      &-2{
-          width: calc((100% / 12) * 2);
-      }
-
-      &-3{
-          width: calc((100% / 12) * 3);
-      }
-      &-4{
-          width: calc((100% / 12) * 4);
-      }
-      &-5{
-          width: calc((100% / 12) * 5);
-      }
-      &-6{
-          width: calc((100% / 12) * 6);
-      }
-      &-7{
-          width: calc((100% / 12) * 7);
-      }
-      &-8{
-          width: calc((100% / 12) * 8);
-      }
-      &-9{
-          width: calc((100% / 12) * 9);
-      }
-      &-10{
-          width: calc((100% / 12) * 10);
-      }
-      &-11{
-          width: calc((100% / 12) * 11);
-      }
-      &-12{
-        width: 100%;
+      @for $i from 1 through 12 {
+        &-#{$i}{
+          width: calc((100% / 12) * #{$i});
+        }
       }
     }
 
     .offset {
-      &-1{
-        margin-left: calc(100% / 12);
-      }
-      &-2{
-        margin-left: calc((100% / 12) * 2);
-      }
-  
-      &-3{
-        margin-left: calc((100% / 12) * 3);
-      }
-      &-4{
-        margin-left: calc((100% / 12) * 4);
-      }
-      &-5{
-        margin-left: calc((100% / 12) * 5);
-      }
-      &-6{
-        margin-left: calc((100% / 12) * 6);
-      }
-      &-7{
-        margin-left: calc((100% / 12) * 7);
-      }
-      &-8{
-        margin-left: calc((100% / 12) * 8);
-      }
-      &-9{
-        margin-left: calc((100% / 12) * 9);
-      }
-      &-10{
-        margin-left: calc((100% / 12) * 10);
-      }
-      &-11{
-        margin-left: calc((100% / 12) * 11);
-      }
-      &-12{
-        margin-left: 100%;
+      @for $i from 1 through 12 {
+        &-#{$i}{
+          margin-left: calc((100% / 12) * #{$i});
+        }
       }
     }
+
   }
 }
 
@@ -93,85 +29,21 @@
 
     .row {
       .col-sm {
-        &-1{
-          width: calc(100% / 12);
-        }
-  
-        &-2{
-            width: calc((100% / 12) * 2);
-        }
-  
-        &-3{
-            width: calc((100% / 12) * 3);
-        }
-        &-4{
-            width: calc((100% / 12) * 4);
-        }
-        &-5{
-            width: calc((100% / 12) * 5);
-        }
-        &-6{
-            width: calc((100% / 12) * 6);
-        }
-        &-7{
-            width: calc((100% / 12) * 7);
-        }
-        &-8{
-            width: calc((100% / 12) * 8);
-        }
-        &-9{
-            width: calc((100% / 12) * 9);
-        }
-        &-10{
-            width: calc((100% / 12) * 10);
-        }
-        &-11{
-            width: calc((100% / 12) * 11);
-        }
-        &-12{
-          width: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            width: calc((100% / 12) * #{$i});
+          }
         }
       }
   
       .offset-sm {
-        &-1{
-          margin-left: calc(100% / 12);
-        }
-        &-2{
-          margin-left: calc((100% / 12) * 2);
-        }
-    
-        &-3{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-4{
-          margin-left: calc((100% / 12) * 4);
-        }
-        &-5{
-          margin-left: calc((100% / 12) * 5);
-        }
-        &-6{
-          margin-left: calc((100% / 12) * 6);
-        }
-        &-7{
-          margin-left: calc((100% / 12) * 7);
-        }
-        &-8{
-          margin-left: calc((100% / 12) * 8);
-        }
-        &-9{
-          margin-left: calc((100% / 12) * 9);
-        }
-        &-10{
-          margin-left: calc((100% / 12) * 10);
-        }
-        &-11{
-          margin-left: calc((100% / 12) * 11);
-        }
-        &-12{
-          margin-left: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            margin-left: calc((100% / 12) * #{$i});
+          }
         }
       }
+
     }
   }
 }
@@ -179,86 +51,23 @@
 @media(min-width: 768px) {
   .container {
     .row {
+
       .col-md {
-        &-1{
-          width: calc(100% / 12);
-        }
-  
-        &-2{
-            width: calc((100% / 12) * 2);
-        }
-  
-        &-3{
-            width: calc((100% / 12) * 3);
-        }
-        &-4{
-            width: calc((100% / 12) * 4);
-        }
-        &-5{
-            width: calc((100% / 12) * 5);
-        }
-        &-6{
-            width: calc((100% / 12) * 6);
-        }
-        &-7{
-            width: calc((100% / 12) * 7);
-        }
-        &-8{
-            width: calc((100% / 12) * 8);
-        }
-        &-9{
-            width: calc((100% / 12) * 9);
-        }
-        &-10{
-            width: calc((100% / 12) * 10);
-        }
-        &-11{
-            width: calc((100% / 12) * 11);
-        }
-        &-12{
-          width: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            width: calc((100% / 12) * #{$i});
+          }
         }
       }
   
       .offset-md {
-        &-1{
-          margin-left: calc(100% / 12);
-        }
-        &-2{
-          margin-left: calc((100% / 12) * 2);
-        }
-    
-        &-3{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-4{
-          margin-left: calc((100% / 12) * 4);
-        }
-        &-5{
-          margin-left: calc((100% / 12) * 5);
-        }
-        &-6{
-          margin-left: calc((100% / 12) * 6);
-        }
-        &-7{
-          margin-left: calc((100% / 12) * 7);
-        }
-        &-8{
-          margin-left: calc((100% / 12) * 8);
-        }
-        &-9{
-          margin-left: calc((100% / 12) * 9);
-        }
-        &-10{
-          margin-left: calc((100% / 12) * 10);
-        }
-        &-11{
-          margin-left: calc((100% / 12) * 11);
-        }
-        &-12{
-          margin-left: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            margin-left: calc((100% / 12) * #{$i});
+          }
         }
       }
+
     }
   }
 }
@@ -267,86 +76,23 @@
 @media(min-width: 992px) {
   .container {
     .row {
+
       .col-lg {
-        &-1{
-          width: calc(100% / 12);
-        }
-  
-        &-2{
-            width: calc((100% / 12) * 2);
-        }
-  
-        &-3{
-            width: calc((100% / 12) * 3);
-        }
-        &-4{
-            width: calc((100% / 12) * 3);
-        }
-        &-5{
-            width: calc((100% / 12) * 3);
-        }
-        &-6{
-            width: calc((100% / 12) * 3);
-        }
-        &-7{
-            width: calc((100% / 12) * 3);
-        }
-        &-8{
-            width: calc((100% / 12) * 3);
-        }
-        &-9{
-            width: calc((100% / 12) * 3);
-        }
-        &-10{
-            width: calc((100% / 12) * 3);
-        }
-        &-11{
-            width: calc((100% / 12) * 3);
-        }
-        &-12{
-          width: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            width: calc((100% / 12) * #{$i});
+          }
         }
       }
   
       .offset-lg {
-        &-1{
-          margin-left: calc(100% / 12);
-        }
-        &-2{
-          margin-left: calc((100% / 12) * 2);
-        }
-    
-        &-3{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-4{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-5{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-6{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-7{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-8{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-9{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-10{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-11{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-12{
-          margin-left: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            margin-left: calc((100% / 12) * #{$i});
+          }
         }
       }
+
     }
   }
 }
@@ -355,85 +101,21 @@
   .container {
     .row {
       .col-xl {
-        &-1{
-          width: calc(100% / 12);
-        }
-  
-        &-2{
-            width: calc((100% / 12) * 2);
-        }
-  
-        &-3{
-            width: calc((100% / 12) * 3);
-        }
-        &-4{
-            width: calc((100% / 12) * 3);
-        }
-        &-5{
-            width: calc((100% / 12) * 3);
-        }
-        &-6{
-            width: calc((100% / 12) * 3);
-        }
-        &-7{
-            width: calc((100% / 12) * 3);
-        }
-        &-8{
-            width: calc((100% / 12) * 3);
-        }
-        &-9{
-            width: calc((100% / 12) * 3);
-        }
-        &-10{
-            width: calc((100% / 12) * 3);
-        }
-        &-11{
-            width: calc((100% / 12) * 3);
-        }
-        &-12{
-          width: 100%;
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            width: calc((100% / 12) * #{$i});
+          }
         }
       }
   
-      .offset-sm {
-        &-1{
-          margin-left: calc(100% / 12);
-        }
-        &-2{
-          margin-left: calc((100% / 12) * 2);
-        }
-    
-        &-3{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-4{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-5{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-6{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-7{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-8{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-9{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-10{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-11{
-          margin-left: calc((100% / 12) * 3);
-        }
-        &-12{
-          margin-left: 100%;
+      .offset-xl {
+        @for $i from 1 through 12 {
+          &-#{$i}{
+            margin-left: calc((100% / 12) * #{$i});
+          }
         }
       }
+
     }
   }
 }
